Fix textarea alignment

--- a/src/components/text-field.scss
+++ b/src/components/text-field.scss
@@ -72,6 +72,7 @@ body.is-phone:not(.is-android:not(.material-off)) {
     min-height: var(--input-height);
     font-weight: normal;
     text-align-last: unset;
+    text-align: start;
   }
 
   select,
